--- a/public/sass/partials/_pagination.scss
+++ b/public/sass/partials/_pagination.scss
@@ -5,7 +5,6 @@ $module: 'pagination';
 
 .#{$module} {
   @extend %clearfix;
-  min-height: 37px;
   position: relative;
   width: 100%;
 
